--- a/src/Views/home.phtml
+++ b/src/Views/home.phtml
@@ -11,9 +11,9 @@
 	});
 </script>
 <?= ViewLoader::load('breadcrumb', array('items' => array((object)array('active' => true, 'title' => 'Home')))) ?>
-<div class="container" style="height: 330px;">
+<div class="container">
 	<div class="row">
-		<div class="hidden-phone span9">
+		<div id="skitter_box" class="span9">
 			<div class="box_skitter box_skitter_large" style="margin-left: 10px;">
 				<ul>
 					<li>
@@ -88,98 +88,95 @@
 			</div>
 		</div>
 		<div class="span3">
-    		<div class="row">
-            	<div class="span3 box">
-            		<h4>Newsletter</h4>
-            		<p style="color: black">
-            			Don't miss any release and get limited promotional offers!
-            			<form method="post" action="/subscriptions">
-            				<input name="email" type="email" placeholder="E-Mail Address" /><br/>
-            				<input type="submit" class="btn" value="Subscribe now">
-            			</form>
-            		</p>
-            	</div>
-            </div>
-            <div class="row">
-            	<div class="span3 box">
-            		<h4>Bookings</h4>
-            		<p>
-            			<form method="get" action="/bookings">
-            				<input type="submit" class="btn" value="Get your party started">
-            			</form>
-            		</p>
-            	</div>
-            </div>
+        	<div class="row hero-like">
+        		<div class="span3">
+            	<h4>Newsletter</h4>
+        		<p style="color: black">
+        			Don't miss any release and get limited promotional offers!
+        			<form method="post" action="/subscriptions">
+        				<input name="email" type="email" placeholder="E-Mail Address" /><br/>
+        				<input type="submit" class="btn" value="Subscribe now">
+        			</form>
+        		</p>
+        		</div>
+        	</div>
+    		<div class="row hero-like">
+    			<div class="span3">
+            	<h4>Bookings</h4>
+        		<p>
+        			<form method="get" action="/bookings">
+        				<input type="submit" class="btn" value="Get your party started">
+        			</form>
+        		</p>
+        		</div>
+    		</div>
 		</div>
-	</div>
-</div>
 
-<?/*
-
-*/?>
-
-<div class="container home">
-	<div class="span4 first backgrounded">
-		<? if (count($releases)): ?>
-			<h4>Upcoming releases</h4>
-			<div class="thumbnail">
-				<ul class="light">
-					<? foreach ($releases as $release): ?>
-						<li class="icon-signal"><span>
-						<? if ($release->artist): ?>
-								<?= $release->artist->name ?> - 
-						<? endif ?>
-						<?= $release->title ?></span> <span class="small"></span></li>
-					<? endforeach ?>
-				</ul>
-				<a data-method="async" class="bottom" href="/releases/upcoming">more info</a>
-			</div>
-		<? endif ?>
-		<? if (count($events)): ?>
-			<h4>Upcoming Events</h4>
-			<div class="thumbnail">
-				<ul class="light">
-					<? foreach ($events as $event): ?>
-						<li class="icon-star"><span><?= $event->name ?></span> <span class="small">(<?= date("Y-m-d", strtotime($event->fromTime)) ?>)</span></li>
-					<? endforeach ?>
-				</ul>
-				<a data-method="async" class="bottom" href="/events">all events</a>
-			</div>
-		<? endif ?>
-	
-		<h4>Latest releases</h4>
-		<? foreach ($latestReleases as $release): ?>
-			<div class="thumbnail release-box" style="margin-bottom: 5px;">
-				<strong><a href="/artist/<?= $release->artist->key ?>" data-method="async"><?= $release->artist->name ?></a> - <?= $release->title ?></strong>
-				<br/>
-				<img src="/img/releases/<?= $release->cover ?>" width="180" height="180" alt="<?= $release->artist->name ?> - <?= $release->title ?>" />
-				<div class="desc">
-					<p>
-						<strong>Genre:</strong> <?= $release->genre->name ?><br/>
-						<strong>Date:</strong> <?= $release->date ?><br/>
-						<strong>Type:</strong> <?= $release->type ?><br/>
-						<strong>Format:</strong> <?= $release->format ?><br/>
-						<? if (isset($release->tracks)): ?>
-							<strong>Tracks:</strong>
-							<?= implode(', ', $release->tracks) ?>
-						<? endif ?>
-						<? if (count($release->links)): ?>
-							<strong>Buy now:</strong><br/>
-							<? foreach ($release->links as $link): ?>
-								<a target="_blank" href="<?= $link->link ?>"><?= $link->shopName ?></a><br/>
-							<? endforeach ?>
-						<? endif ?>
-					</p>
-				</div>
-				<div class="clear"></div>
-			</div>
-		<? endforeach ?>
-	</div>
-	<div class="span5">
-		<iframe width="100%" height="1000" scrolling="no" frameborder="no" src="//w.soundcloud.com/player/?url=https%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F4623566%3Fsecret_token%3Ds-EkFxj&amp;color=007aff&amp;auto_play=true&amp;show_artwork=false"></iframe>
-	</div>
-	<div class="span3">
-		<script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
-		<a class="twitter-timeline"  href="//twitter.com/3886records" height="1000" data-widget-id="336446706327625729">Tweets by @3886records</a>
-	</div>
+		<div class="span4 first backgrounded">
+		
+    		<? if (count($releases)): ?>
+    			<h4>Upcoming releases</h4>
+    			<div class="thumbnail">
+    				<ul class="light">
+    					<? foreach ($releases as $release): ?>
+    						<li class="icon-signal"><span>
+    						<? if ($release->artist): ?>
+    								<?= $release->artist->name ?> - 
+    						<? endif ?>
+    						<?= $release->title ?></span> <span class="small"></span></li>
+    					<? endforeach ?>
+    				</ul>
+    				<a data-method="async" class="bottom" href="/releases/upcoming">more info</a>
+    			</div>
+    		<? endif ?>
+    		<? if (count($events)): ?>
+    			<h4>Upcoming Events</h4>
+    			<div class="thumbnail">
+    				<ul class="light">
+    					<? foreach ($events as $event): ?>
+    						<li class="icon-star"><span><?= $event->name ?></span> <span class="small">(<?= date("Y-m-d", strtotime($event->fromTime)) ?>)</span></li>
+    					<? endforeach ?>
+    				</ul>
+    				<a data-method="async" class="bottom" href="/events">all events</a>
+    			</div>
+    		<? endif ?>
+    	
+    		<h4>Latest releases</h4>
+    		<? foreach ($latestReleases as $release): ?>
+    			<div class="thumbnail release-box" style="margin-bottom: 5px;">
+    				<strong><a href="/artist/<?= $release->artist->key ?>" data-method="async"><?= $release->artist->name ?></a> - <?= $release->title ?></strong>
+    				<br/>
+    				<img src="/img/releases/<?= $release->cover ?>" width="180" height="180" alt="<?= $release->artist->name ?> - <?= $release->title ?>" />
+    				<div class="desc">
+    					<p>
+    						<strong>Genre:</strong> <?= $release->genre->name ?><br/>
+    						<strong>Date:</strong> <?= $release->date ?><br/>
+    						<strong>Type:</strong> <?= $release->type ?><br/>
+    						<strong>Format:</strong> <?= $release->format ?><br/>
+    						<? if (isset($release->tracks)): ?>
+    							<strong>Tracks:</strong>
+    							<?= implode(', ', $release->tracks) ?>
+    						<? endif ?>
+    						<? if (count($release->links)): ?>
+    							<strong>Buy now:</strong><br/>
+    							<? foreach ($release->links as $link): ?>
+    								<a target="_blank" href="<?= $link->link ?>"><?= $link->shopName ?></a><br/>
+    							<? endforeach ?>
+    						<? endif ?>
+    					</p>
+    				</div>
+    				<div class="clear"></div>
+    			</div>
+    		<? endforeach ?>
+		</div>
+		
+    	<div class="span5">
+    		<iframe width="100%" height="1000" scrolling="no" frameborder="no" src="//w.soundcloud.com/player/?url=https%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F4623566%3Fsecret_token%3Ds-EkFxj&amp;color=007aff&amp;auto_play=true&amp;show_artwork=false"></iframe>
+    	</div>
+    	
+    	<div class="span3">
+    		<script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
+    		<a class="twitter-timeline"  href="//twitter.com/3886records" height="1000" data-widget-id="336446706327625729">Tweets by @3886records</a>
+    	</div>
+    </div>
 </div>
