--- a/src/Views/layout.phtml
+++ b/src/Views/layout.phtml
@@ -9,10 +9,10 @@
 <title>3886records - Finest Psychedelic Music</title>
 <? endif ?>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Thirtyeight Eightysix Records is an independant record label for electronic dance music established by Spekta in 2012.">
-<meta name="keywords" content="3886, 3886rec., 3886rec, 3886 Records, Goa, Trance, Progressive Trance, Psychedelic Trance, Psytrance, Goatrance, Thirtyeight Eightysix">
+<meta name="description" content="Thirtyeight Eightysix Records is a Progressive and Psychedelic Trance label established in 2012.">
+<meta name="keywords" content="3886, 3886rec., 3886rec, 3886 Records, Goa, Trance, Progressive Trance, Psychedelic Trance, Psytrance, Goatrance, Thirtyeight Eightysix, Dirty Prog, Psy Prog, Lite Prog">
 <meta name="author" content="3886records">
-<meta property="og:title" content="<?= isset($metaTitle) ? $metaTitle : 'Finest Psychedelic Music' ?>" />
+<meta property="og:title" content="<?= isset($metaTitle) ? $metaTitle : 'Progressive & PsyTrance' ?> - 3886records" />
 <? if (isset($facebookImage) && !empty($facebookImage)): ?>
 <meta property="og:image" content="<?= $facebookImage ?>" />
 <? endif ?>
@@ -32,6 +32,7 @@
 <link type="text/css" href="/css/skitter.styles.css" media="all" rel="stylesheet" />
 <link type="text/css" rel='stylesheet' href='/css/fullcalendar.min.css' />
 <link rel="stylesheet" rel='stylesheet' href="/css/jquery-ui-timepicker-addon.css">
+<link href="/css/croppic.css" rel="stylesheet">
 <!--[if IE 7]>
     <link rel="stylesheet" href="/css/font-awesome-ie7.min.css">
     <![endif]-->
@@ -59,6 +60,7 @@
 </script>
 <div id="fb-root"></div>
 <div class="spinner"></div> 
+<div>
 <header>
   <nav data-navgroup="main">
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -77,6 +79,7 @@
     </div>
   </nav>
 </header>
+</div>
 <div id="content">
     <?= $content ?>
 </div>
@@ -108,6 +111,7 @@
 <script src='/js/moment.js'></script>
 <script src='/js/fullcalendar.min.js'></script>
 <script src="/js/jquery-ui-timepicker-addon.js"></script>
+<script src="/js/croppic.min.js"></script>
 <script>    
      jQuery(window).load(function() { 
         jQuery('.spinner').animate({'opacity':0},500,'easeOutCubic',function (){jQuery(this).css('display','none')});  
